--- a/lib/src/hero_tour/hero_tour_component.html
+++ b/lib/src/hero_tour/hero_tour_component.html
@@ -1,10 +1,7 @@
 <h1>{{title}}</h1>
-<h2>{{hero.name}}</h2>
-<div><label>id: </label>{{hero.id}}</div>
-<div><label>name: </label>{{hero.name}}</div>
-
-<div>
-    <label>name: </label>
-    <input [(ngModel)]="hero.name" placeholder="name">
-</div>
-  
+<h2>Heroes</h2>
+<ul class="heroes">
+    <li *ngFor="let hero of heroList">
+        <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </li>
+</ul>
