--- a/lib/src/hero_tour/hero_tour_component.html
+++ b/lib/src/hero_tour/hero_tour_component.html
@@ -1,7 +1,17 @@
 <h1>{{title}}</h1>
 <h2>Heroes</h2>
 <ul class="heroes">
-    <li *ngFor="let hero of heroList">
+    <li *ngFor="let hero of heroList" (click)="onSelect(hero)"
+    [class.selected]="hero === selectedHero">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
     </li>
 </ul>
+
+<div *ngIf="selectedHero != null">
+    <h2>{{selectedHero.name}}</h2>
+    <div><label>id: </label>{{selectedHero.id}}</div>
+    <div>
+        <label>name: </label>
+        <input [(ngModel)]="selectedHero.name" placeholder="name">
+    </div>    
+</div>
