--- a/lib/src/hero_tour/hero_tour_component.html
+++ b/lib/src/hero_tour/hero_tour_component.html
@@ -7,11 +7,13 @@
     </li>
 </ul>
 
-<div *ngIf="selectedHero != null">
+<!-- <div *ngIf="selectedHero != null">
     <h2>{{selectedHero.name}}</h2>
     <div><label>id: </label>{{selectedHero.id}}</div>
     <div>
         <label>name: </label>
         <input [(ngModel)]="selectedHero.name" placeholder="name">
     </div>    
-</div>
+</div> -->
+
+<my-hero [hero]="selectedHero"></my-hero>
