--- a/lib/src/hero_tour/hero_component/hero_component.html
+++ b/lib/src/hero_tour/hero_component/hero_component.html
@@ -1,10 +1,10 @@
 <div *ngIf="hero != null">
     <h2>{{hero.name}}</h2>
     <div>
-        <label>id: </label>{{hero.id}}
-    </div>
+        <label>id: </label>{{hero.id}}</div>
     <div>
         <label>name: </label>
-        <input [(ngModel)]="hero.name" placeholder="name">
+        <input [(ngModel)]="hero.name" placeholder="name" />
     </div>
+    <button (click)="goBack()">Back</button>
 </div>
