--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script>
+      (function () {
+        var m = document.location.pathname.match(/^(\/[-\w]+)+\/web($|\/)/);
+        document.write('<base href="' + (m ? m[0] : '/') + '" />');
+      }());
+    </script>
     <title>dart_hero_tour</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
