--- a/lib/src/hero_tour/hero_tour_list/hero_tour_list_component.html
+++ b/lib/src/hero_tour/hero_tour_list/hero_tour_list_component.html
@@ -1,5 +1,15 @@
 <h1>{{title}}</h1>
 <h2>Heroes</h2>
+
+<div>
+    <label>Hero name:</label>
+    <input #heroName />
+    <button (click)="add(heroName.value); heroName.value=''">
+        Add
+    </button>
+</div>
+
+
 <ul class="heroes">
     <li *ngFor="let hero of heroList" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
