--- a/lib/src/hero_tour/hero_tour_list/hero_tour_list_component.html
+++ b/lib/src/hero_tour/hero_tour_list/hero_tour_list_component.html
@@ -13,6 +13,7 @@
 <ul class="heroes">
     <li *ngFor="let hero of heroList" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
+        <button class="delete" (click)="delete(hero); $event.stopPropagation()">x</button>
     </li>
 </ul>
 
