--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -1,4 +1,5 @@
-<h1>My First AngularDart App</h1>
+<div class="container">
+        <h1>My First AngularDart App</h1>
 
 <!-- <button type="button" class="btn btn-primary" (click)="changeViewToTodo()">Show Todo</button>
 <button type="button" class="btn btn-secondary" (click)="changeViewToHero()">Show Heros Tour</button> -->
@@ -11,3 +12,4 @@
 </div> -->
 
 <hero-tour-app></hero-tour-app>
+</div>
