Success to retrieve all hero data from real backend server

--- a/lib/src/dashboard_component.html
+++ b/lib/src/dashboard_component.html
@@ -11,4 +11,11 @@
         </div>
     </a>
 </div>
+
+
+<div *ngFor="let nxtHero of nextGenHeroes">
+    <a>{{nxtHero.heroName}}</a>
+    <a>{{nxtHero.heroAbility}}</a>
+</div>
+
 <hero-search></hero-search>
