--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -1,15 +1,4 @@
-<div class="container">
+<div class="container" style="background-color: yellow">
         <h1>My First AngularDart App</h1>
-
-<!-- <button type="button" class="btn btn-primary" (click)="changeViewToTodo()">Show Todo</button>
-<button type="button" class="btn btn-secondary" (click)="changeViewToHero()">Show Heros Tour</button> -->
-
-<!-- <div *ngIf="show_todo_view">
-        <todo-list></todo-list>
-</div>
-<div *ngIf="show_hero_view">
         <hero-tour-app></hero-tour-app>
-</div> -->
-
-<hero-tour-app></hero-tour-app>
 </div>
