--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -1,4 +1,8 @@
-<div class="container" style="background-color: yellow">
-        <h1>My First AngularDart App</h1>
-        <hero-tour-app></hero-tour-app>
+<div class="container">
+        <h1>My First AngularDart Hero App</h1>
+        <div class="row">
+                <div class="col-12">
+                        <hero-tour-app></hero-tour-app>
+                </div>
+        </div>
 </div>
