--- a/lib/src/dashboard_component.html
+++ b/lib/src/dashboard_component.html
@@ -1,19 +1,31 @@
-<h3>Top Heroes</h3>
-<div >
-    <div *ngFor="let topHero of topHeroesList">
-        {{topHero.heroName}}
-    </div>
-        <!-- class="grid grid-pad" -->
-    <!-- <div *ngFor="let hero of heroes">
-    <div class="module hero">
-      <h4>{{hero.name}}</h4>
-    </div>
-  </div> -->
-    <!-- <a *ngFor="let hero of nextGenHeroes" class="col-1-4" [routerLink]="heroUrl(hero.heroId)">
-        <div class="module hero">
-            <h4>{{hero.heroName}}</h4>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="top-title">
+                <h3>Top Heroes</h3>
+            </div>
         </div>
-    </a> -->
+        <div class="col-12">
+            <div class="top-hero">
+                <div class="row">
+                    <div *ngFor="let topHero of topHeroesList" class="col-3">
+                        <div class="top-hero-card">
+                            <h3>{{topHero.heroName}}</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 control-panel">
+            <button type="button" class="btn btn-outline-primary" (click)="displayAllHeroes()">Show All Heroes</button>
+            <button type="button" class="btn btn-primary" (click)="addNewHero()">Add New Hero</button>
+        </div>
+        <div class="col-12 display-panel">
+            <!-- <router-outlet></router-outlet> -->
+        </div>
+    </div>
 </div>
 
 <!-- <hero-search></hero-search> -->
