--- a/lib/src/hero_tour/hero_route/hero_tour_route_component.html
+++ b/lib/src/hero_tour/hero_route/hero_tour_route_component.html
@@ -5,12 +5,8 @@
         </div>
         <div class="col-12 nav-btn">
             <button type="button" class="btn btn-primary" (click)="goToDashboard()">Dashboard</button>
-            <button type="button" class="btn btn-secondary">Heroes</button>
+            <button type="button" class="btn btn-secondary" (click)="goToMixedHeroes()">Heroes</button>
         </div>
-        <!-- <nav>
-            <a [routerLink]="RoutePaths.dashboard.toUrl()" [routerLinkActive]="'active'">Dashboard</a>
-            <a [routerLink]="RoutePaths.heroes.toUrl()" [routerLinkActive]="'active'">Heroes</a>
-        </nav> -->
     </div>
     <div class="row">
         <div class="col-12">
