--- a/lib/src/hero_tour/hero_edit/hero_edit_component.html
+++ b/lib/src/hero_tour/hero_edit/hero_edit_component.html
@@ -3,6 +3,7 @@
         <div class="form-group">
             <label for="name">Hero Name</label>
             <input type="text" class="form-control" id="name" [(ngModel)]="newHero.heroName" ngControl="name" required>
+            <div id="name-error">Please enter hero name</div>
         </div>
         <div class="form-group">
             <label for="ability-type">Ability Type</label>
@@ -14,14 +15,17 @@
                 <option value="Ground">Ground</option>
                 <option value="Wind">Wind</option>
             </select>
+            <div id="type-error">Please select hero ability type</div>
         </div>
         <div class="form-group">
             <label for="ability">Hero Ability</label>
             <input type="text" class="form-control" id="ability" [(ngModel)]="newHero.heroAbility" ngControl="ability" required>
+            <div id="ability-error">Please enter hero ability</div>
         </div>
         <div class="form-btn">
             <button type="button" class="btn btn-primary" (click)="submitHero()">Add Hero</button>
             <small class="col text-right">*&nbsp;Required</small>
         </div>
     </form>
+    <button id="back-btn" type="button" class="btn btn-primary" (click)="goBack()">Back</button>
 </div>
